# app/router/router.js
@@ -30,6 +30,7 @@ const {
   updateClientFamilyProfileSchema,
   forgotPasswordLoginIdSchema,
   forgotThroughMailSchema,
+  authorizedPersonResetPasswordSchema
 } = require("../validator/validatator");
 const {
   adminLogin,
@@ -54,6 +55,7 @@ const {
   deleteauthorizedPerson,
   authorizedPersonLoginById,
   authorizedPersonMailLoginById,
+  authorizedPersonResetPassword
 } = require("../controllers/authorizedPerson.controller");
 const {
   addClientFamilyPerson,
@@ -93,6 +95,8 @@ router.get(routes.v1.authorizedPerson.getProfileById,errHandle(getauthorizedPers
 router.delete(routes.v1.authorizedPerson.delete,[verifyToken(["AP","SUPER ADMIN","ADMIN"]), updateAuthorizedPersonProfileSchema],errHandle(deleteauthorizedPerson));
 router.put(routes.v1.authorizedPerson.updateProfile,[verifyToken(["AP"]), updateAuthorizedPersonProfileSchema],errHandle(updateauthorizedPersonProfile));
 router.get(routes.v1.authorizedPerson.list, [verifyToken(["ADMIN","SUPER ADMIN"]), authorizedPersonListSchema],errHandle(authorizedPersonList));
+
+router.put(routes.v1.authorizedPerson.resetPassword,[verifyToken(["AP"]), authorizedPersonResetPasswordSchema],errHandle(authorizedPersonResetPassword));
 
 
 //client family related api
